--- a/portal/sass/design/_mobile-map.scss
+++ b/portal/sass/design/_mobile-map.scss
@@ -29,6 +29,10 @@
     padding: 6px 10px 10px 10px;
     width: auto;
     z-index: 8;
+
+    select{
+      width: 70px;
+    }
   }
 
   #labelTable {
